# TimbreAutomatizado

./: .gitignore  CMakeLists.txt  Perfiles.json  README.md  TimbreAutomatizado.pro  main.cpp  resources.qrc
Inicio/: inicio.cpp  inicio.h  inicio.ui
Manual/: manual.cpp  manual.h  manual.ui
Splash/: splash.cpp  splash.h
src/Comunicacion/: comunicacion.cpp  comunicacion.h
src/Configuracion/: configuracion.cpp  configuracion.h  configuracion.ui
src/Creditos/: creditos.h  creditos.ui
src/Inicio/: inicio.cpp  inicio.h  inicio.ui
src/Manual/: manual.cpp  manual.h  manual.ui
src/Perfiles/: JsonSerializer.cpp  JsonSerializer.h  formularioperfiles.cpp  formularioperfiles.h  formularioperfiles.ui  formularioperfilesopciones.cpp  formularioperfilesopciones.h  formularioperfilesopciones.ui  perfiles.cpp  perfiles.h  perfiles.ui
